force-app/main/default/objects/Provisioning_Log__c/Provisioning_Log__c.object-meta.xml
<CustomObject>
    <description>The automated provisioning process, started by the NCS Form or perhaps others, uses this Object to store the results of the process.</description>
    <label>Provisioning Log</label>
    <nameField>
        <displayFormat>Log #{000000000}</displayFormat>
        <label>Provisioning Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>