force-app/main/default/objects/Provisioning_Log__c/fields/Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Correlation_ID__c</fullName>
    <externalId>true</externalId>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>