force-app/main/default/objects/Provisioning_Log__c/fields/Implementation_Services__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Services</label>
    <referenceTo>Implementation_Services__c</referenceTo>
    <relationshipLabel>Provisioning Logs</relationshipLabel>
    <relationshipName>Provisioning_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>